# nightlights

./: .env  .gitignore  00_setup.ipynb  01_exporation.ipynb  02_brightness_inference_testing.ipynb  03_inference_spatial_test.ipynb  04_radiance_comparison.ipynb  05_diffusion_testing.ipynb  06_RF_test.ipynb  06_model_testing.ipynb  README.md  Untitled-1.ipynb  config.py  diffusion.py  main.py  notes.txt  processing_log.txt  pyproject.toml  scripts.py
outputs/state_summaries/: Alabama_summary.csv  Arizona_summary.csv  Arkansas_summary.csv  California_summary.csv  Colorado_summary.csv  Connecticut_summary.csv  Delaware_summary.csv  District_of_Columbia_summary.csv  Florida_summary.csv  Georgia_summary.csv  Idaho_summary.csv  Illinois_summary.csv  Indiana_summary.csv  Iowa_summary.csv  Kansas_summary.csv  Kentucky_summary.csv  Louisiana_summary.csv  Maine_summary.csv  Maryland_summary.csv  Massachusetts_summary.csv  Michigan_summary.csv  Minnesota_summary.csv  Mississippi_summary.csv  Missouri_summary.csv  Montana_summary.csv  Nebraska_summary.csv  Nevada_summary.csv  New_Hampshire_summary.csv  New_Jersey_summary.csv  New_Mexico_summary.csv  New_York_summary.csv  North_Carolina_summary.csv  North_Dakota_summary.csv  Ohio_summary.csv  Oklahoma_summary.csv  Oregon_summary.csv  Pennsylvania_summary.csv  Rhode_Island_summary.csv  South_Carolina_summary.csv  South_Dakota_summary.csv  (+10 more)
