[project]
name = "nightlights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.22.0",
    "arviz-base>=0.7.0",
    "arviz-plots>=0.7.0",
    "arviz-stats>=0.7.0",
    "bambi>=0.16.0",
    "black>=25.9.0",
    "dask>=2025.9.1",
    "distributed>=2025.9.1",
    "geocube>=0.7.1",
    "geopandas>=1.1.1",
    "hvplot>=0.12.1",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numba>=0.62.1",
    "pandas>=2.3.2",
    "pytensor>=2.35.1",
    "rioxarray>=0.19.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

